correction style openCollapse

--- a/src/styles/components/_collapse.scss
+++ b/src/styles/components/_collapse.scss
@@ -48,7 +48,7 @@
     transition: max-height 0.9s ease;
   }
   .openCollapse {
-    max-height: 500px;
+    max-height: 350px;
     transition: max-height 0.9s ease-in-out;
   }
 }
